[package]
name = "edugeyser-signing-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Skin conversion (matching global_api versions where possible)
lodepng = { version = "3.7", default-features = false }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
json = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# JWT signing
jsonwebtoken = "9"
p384 = { version = "0.13", features = ["ecdsa", "pem", "jwk"] }
ecdsa = { version = "0.16", features = ["signing", "pem"] }
elliptic-curve = { version = "0.13", features = ["jwk"] }
rand = "0.8"

# Xbox auth
reqwest = { version = "0.12", features = ["json", "rustls-tls-webpki-roots"], default-features = false }

# Config & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hex = "0.4"
once_cell = "1.19"
chrono = "0.4"

# Image handling
rgb = "0.8"
image = { version = "0.24", features = ["png"], default-features = false }
